--- a/BrideyApp/BrideyApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using BrideyApp.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
