--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -39,7 +39,8 @@
 
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" href="~/admin/vendor/fonts/boxicons.css" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
     <!-- Core CSS -->
     <link rel="stylesheet" href="~/admin/vendor/css/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="~/admin/vendor/css/theme-default.css" class="template-customizer-theme-css" />
@@ -143,7 +144,7 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="pages-misc-error.html" class="menu-link">
+                                <a asp-area="Admin" asp-controller="Slider" asp-action="Index" class="menu-link">
                                     <div data-i18n="Error">Slider</div>
                                 </a>
                             </li>
