--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Slider/Index.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Slider/Index.cshtml
@@ -1,7 +1,56 @@
-﻿
+﻿@model List<Slider>
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+
+<div class="container my-5">
+    <h4 class="card-title" style="margin-left: 22px;">Slider</h4>
+    <div class="table-responsive" style="width: 97%;">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th style="padding-left: 114px;">
+                        Image
+                    </th>
+                    <th style="padding-left: 70px;">
+                        Title
+                    </th>
+                    <th style="padding-left: 114px;">
+                        Operations
+                    </th>
+                    <a class="btn btn-success text-white" asp-action="Create" style="float:right">Create</a>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var slider in Model)
+                {
+                    <tr>
+                        <td class="py-1">
+                            <img src="~/assets/images/@slider.Image" style="width:203px;height:133px" alt="image" />
+                        </td>
+                        <td class="py-1">
+                            @slider.Title
+                        </td>
+                        <td class="py-1">
+                            <div style="display:flex;gap:10px;">
+                                <a style="margin-top: 44px" class="btn btn-outline-info" asp-action="Detail" asp-route-id="@slider.Id">Info</a>
+                                <a style="margin-top: 44px;" class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@slider.Id">Edit</a>
+                                <form asp-action="Delete" asp-route-id="@slider.Id" method="post">
+                                    <button style="margin-top: 44px;" type="submit" class="btn btn-outline-danger">Delete</button>
+                                </form>
+                            </div>
+
+                        </td>
+
+                    </tr>
+                }
+
+            </tbody>
+        </table>
+    </div>
+
+
+
+</div>
 
