--- a/BrideyApp/BrideyApp/wwwroot/assets/scss/_responsive.scss
+++ b/BrideyApp/BrideyApp/wwwroot/assets/scss/_responsive.scss
@@ -14,41 +14,62 @@
         .swiper-slide {
             .slide {
                 .saleName {
-                    top: 24% !important;
-                    font-size: 10px !important;
+                    top: 29% !important;
+                    font-size: 8px !important;
                 }
 
                 .sale {
                     top: 38% !important;
-                    font-size: 16px !important;
+                    font-size: 14px !important;
+                    left: 17%;
                 }
 
                 .caption-contain {
-                    font-size: 10px !important;
+                    font-size: 6px !important;
+                    left: 20%;
+                    top: 49%;
+
 
                 }
 
                 .shop {
                     padding: 3px 5px 3px 5px !important;
                     font-size: 5px !important;
-                    top: 72% !important;
+                    top: 61% !important;
+                    left: 24% !important;
                 }
             }
 
             .slide-2 {
                 .saleName {
-                    right: 26% !important;
+                    right: 13% !important;
+                    font-size: 8px !important;
                 }
 
                 .sale {
-                    right: 23% !important;
-                    top: 35% !important;
+                    top: 38% !important;
+                    left: 52%;
                 }
 
                 .shop {
-                    right: 27% !important;
+
+                    left: 62% !important;
+
                 }
 
+                .caption-contain {
+                    font-size: 6px;
+                    left: 53%;
+                    top: 51%;
+                }
+
+            }
+
+            .slide-3 {
+                .caption-contain {
+                    left: 24%;
+                    top: 50%;
+                }
             }
 
         }
@@ -723,19 +744,23 @@
 
         .right-side {
             margin-top: 39px;
+
             .widget {
                 margin-left: 5px;
             }
+
             .widget-content {
                 margin-left: 5px;
             }
-            .list-posts{
+
+            .list-posts {
                 left: 0%;
                 margin-left: 5px;
 
 
             }
-            .tagcloud{
+
+            .tagcloud {
                 margin-left: 5px;
 
             }
@@ -1102,6 +1127,7 @@
             }
         }
     }
+
     #product-detail {
 
         .prod-thumb-left {
@@ -1515,45 +1541,84 @@
                 .swiper-slide {
                     .slide {
                         .saleName {
-
-                            top: 24% !important;
-                            font-size: 40px !important;
+                            font-size: 14px !important;
                         }
 
                         .sale {
-                            top: 41% !important;
                             font-size: 32px !important;
-                            left: 14%;
                         }
 
                         .caption-contain {
-                            font-size: 20px !important;
-                            left: 14%;
+                            font-size: 12px !important;
 
                         }
 
                         .shop {
                             padding: 6px 7px 6px 7px !important;
                             font-size: 6px !important;
-                            top: 72% !important;
+
+                        }
+                    }
+
+                    .slide-1 {
+                        .saleName {
+                            left: 20%;
+                            top: 33% !important;
+                        }
+
+                        .shop {
+                            top: 64% !important;
+                            left: 23%;
+                        }
+
+                        .sale {
+                            top: 41% !important;
                             left: 14%;
+                        }
+
+                        .caption-contain {
+                            left: 17%;
+                            top: 53%;
+
                         }
                     }
 
                     .slide-2 {
                         .saleName {
-                            right: 26% !important;
+                            left: 50%;
+                            top: 28% !important;
                         }
 
                         .sale {
-                            right: 23% !important;
+
+                            left: 50%;
                             top: 35% !important;
                         }
 
                         .shop {
                             right: 27% !important;
+                            top: 59% !important;
                         }
 
+                        .caption-contain {
+
+                            left: 53%;
+                            top: 49%;
+
+                        }
+
+                    }
+
+                    .slide-3 {
+                        .saleName {
+                            left: 23%;
+                            top: 32% !important;
+                        }
+
+                        .shop {
+                            top: 59% !important;
+                            left: 25% !important;
+                        }
                     }
 
                 }
@@ -2033,6 +2098,25 @@
 
 //RESPONSIVE-FOR-MIDDLE-RANGE
 @media(min-width:768px) and (max-width:1200px) {
+    #slider {
+        .mySwiper {
+            .swiper-wrapper {
+                .swiper-slide {
+                    .slide-2{
+                        .sale{
+                            font-size: 30px !important;
+                        }
+                        .caption-contain{
+                            font-size: 11px !important;
+
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
     #blogs {
         .blog-slider {
             margin-left: 37px;
@@ -2126,6 +2210,7 @@
             }
         }
     }
+
 
 
     #wrapper-forgotPassword {
