--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -153,6 +153,16 @@
                                     <div data-i18n="Error">HomeBanner</div>
                                 </a>
                             </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="AboutUs" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">AboutUs</div>
+                                </a>
+                            </li>
+                                <li class="menu-item">
+                            <a asp-area="Admin" asp-controller="Bride" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Bride</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -275,6 +285,7 @@
 
     <!-- Main JS -->
     <script src="~/admin/js/main.js"></script>
+   
 
     <!-- Page JS -->
     <script src="~/admin/js/dashboards-analytics.js"></script>
