--- a/BrideyApp/BrideyApp/Areas/Admin/Views/HomeBanner/Create.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/HomeBanner/Create.cshtml
@@ -1,7 +1,36 @@
-﻿
+﻿@model HomeBannerCreateVM
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<div class="container my-5">
+    <form class="forms-sample" asp-action="Create" method="post" enctype="multipart/form-data">
+        <label for="formFile" class="form-label my-2">Choose Small Photo</label>
+        <input class="form-control" id="customFile" asp-for="SmallPhoto" />
+        <span class="text-danger" asp-validation-for="SmallPhoto"></span>
+        <label for="formFile" class="form-label my-2">Choose Large Photo</label>
+        <input class="form-control" id="customFile" asp-for="LargePhoto" />
+        <span class="text-danger" asp-validation-for="LargePhoto"></span>
+        <div class="form-group">
+            <label for="formFile" class="form-label my-2">Add Title</label>
+            <input class="form-control" id="customFile" asp-for="Title" />
+            <span class="text-danger" asp-validation-for="Title">@ViewBag.error</span>
+        </div>
+        <div class="form-group">
+            <label for="formFile" class="form-label my-2">Add Description</label>
+            <textarea class="form-control" asp-for="Description" rows="5"></textarea>
+            <span class="text-danger" asp-validation-for="Description">@ViewBag.error</span>
+        </div>
+        <div class="buttons my-3">
+            <button type="submit" class="btn btn-primary mr-2">Submit</button>
+            <a class="btn btn-light" asp-action="Index">Cancel</a>
+        </div>
+    </form>
+</div>
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+ 
+ }
+
 
