--- a/BrideyApp/BrideyApp/Areas/Admin/Views/HomeBanner/Index.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/HomeBanner/Index.cshtml
@@ -1,48 +1,48 @@
-﻿@model HomeBanner
+﻿@model List<HomeBanner>
 @{
     ViewData["Title"] = "Index";
 }
 
-<div class="container my-5">
-    <h4 class="card-title text-center">Home-Banner</h4>
-    <div class="table-responsive" style="width: 97%;">
-        <table class="table table-striped">
+<div class="card mt-5" style="width: 95%;margin-left: 34px;">
+    <div class="table-responsive text-nowrap">
+        <table class="table">
             <thead>
                 <tr>
-                    <th style="padding-left: 114px;">
-                        Large-Image
-                    </th>
-                    <th style="padding-left: 106px;">
-                        Title
-                    </th>
-                    <th style="padding-left: 114px;">
-                        Operations
-                    </th>
-                    <a class="btn btn-success text-white" asp-action="Create" style="float:right">Create</a>
+                    <th style="text-align: center;"> Large-Image</th>
+                    <th style="text-align: center;">Title</th>
+                    <th style="text-align: center;"> Operations</th>
+                    <a class="btn btn-success text-white create-homeBanner" asp-action="Create" style="float:right;margin: 22px;">Create</a>
                 </tr>
             </thead>
-            <tbody>
-                  <tr>
-                    <td class="py-1" style="padding:10px;text-align:center">
-                        <img src="~/assets/images/@Model.LargeImage" style="width: 202px;height:202px" alt="image" />
-                    </td>
-                        <td class="py-1">
-                            @Model.Title
-                        </td>
-                        <td class="py-1">
-                            <div style="display:flex;gap:10px;">
-                            <a class="btn btn-outline-info" asp-action="Detail" asp-route-id="@Model.Id">Info</a>
-                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-                            <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
-                                    <button type="submit" class="btn btn-outline-danger">Delete</button>
-                                </form>
-                            </div>
-                        </td>
-                    </tr>
+            <tbody class="table-border-bottom-0">
+                @if (Model.Count() > 0)
+                {
+                    @foreach (var homeBanner in Model)
+                    {
+                        <tr data-id="@homeBanner.Id">
+                            <td class="py-1" style="padding:10px;text-align:center">
+                                <img src="~/assets/images/@homeBanner.LargeImage" style="width: 202px;height:202px" alt="image" />
+                            </td>
+                            <td class="py-1" style="text-align: center;">
+                                @homeBanner.Title
+                            </td>
+                            <td class="py-1" style="text-align: center;">
+                                <a class="btn btn-outline-info" asp-action="Detail" asp-route-id="@homeBanner.Id">Info</a>
+                                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@homeBanner.Id">Edit</a>
+                                <a class="btn btn-outline-danger delete-homeBanner">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                }
+
             </tbody>
         </table>
     </div>
 </div>
+@section Scripts {
+
+    <script src="~/admin/js/admin.js"></script>
+}
 
 
 
