--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Slider/Create.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Slider/Create.cshtml
@@ -5,22 +5,22 @@
 
 <div class="container my-5">
     <form class="forms-sample" asp-action="Create" method="post" enctype="multipart/form-data">
-        <label for="formFile" class="form-label my-2">Choose Photo</label>
+        <label style="padding-left:6px;" for="formFile" class="form-label my-2">Choose Photo</label>
         <input class="form-control" id="customFile" asp-for="Photo" />
         <span class="text-danger" asp-validation-for="Photo"></span>
         <div class="form-group">
-            <label for="formFile" class="form-label my-2">Add Header</label>
+            <label style="padding-left:6px;" for="formFile" class="form-label my-2">Add Header</label>
             <input class="form-control" id="customFile" asp-for="Header" />
             <span class="text-danger" asp-validation-for="Header">@ViewBag.error</span>
         </div>
         <div class="form-group">
-            <label for="formFile" class="form-label my-2">Add Title</label>
+            <label style ="padding-left:6px;" for="formFile" class="form-label my-2">Add Title</label>
             <input class="form-control" id="customFile" asp-for="Title" />
             <span class="text-danger" asp-validation-for="Title">@ViewBag.error</span>
         </div>
         <div class="form-group">
-            <label for="formFile" class="form-label my-2">Add Description</label>
-            <textarea class="form-control" id="slider-text" asp-for="ShortDesc" rows="5"></textarea>
+            <label style="padding-left:6px;" for="formFile" class="form-label my-2">Add Description</label>
+            <textarea class="form-control" asp-for="ShortDesc" rows="5"></textarea>
             <span class="text-danger" asp-validation-for="ShortDesc">@ViewBag.error</span>
         </div>
         <div class="buttons my-3">
@@ -32,8 +32,4 @@
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/ckeditor/ckeditor.js"></script>
-    <script>
-        CKEDITOR.replace("slider-text")
-    </script>
  }
