--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Slider/Edit.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Slider/Edit.cshtml
@@ -3,26 +3,26 @@
     ViewData["Title"] = "Edit";
 }
 <div class="container my-5">
-    <div class="slider-content" style="width:200px;height:250px;">
+    <div class="slider-content" style="    width: 282px;height: 167px;">
         <img style="width:100%;height:100%;" src="~/assets/images/@Model.Image"/>
     </div>
-    <form class="forms-sample" asp-action="Edit" method="post" enctype="multipart/form-data">
-        <label for="formFile" class="form-label my-2">Choose Photo</label>
+    <form style="width: 70%;"class="forms-sample" asp-action="Edit" method="post" enctype="multipart/form-data">
+        <label style="padding-left:6px;" for="formFile" class="form-label my-2">Choose Photo</label>
         <input class="form-control" id="customFile" asp-for="Photo" />
         <span class="text-danger" asp-validation-for="Photo"></span>
         <div class="form-group">
-            <label for="formFile" class="form-label my-2">Add Header</label>
+            <label style="padding-left:6px;" for="formFile" class="form-label my-2">Add Header</label>
             <input class="form-control" id="customFile" asp-for="Header" />
             <span class="text-danger" asp-validation-for="Header">@ViewBag.error</span>
         </div>
         <div class="form-group">
-            <label for="formFile" class="form-label my-2">Add Title</label>
+            <label style="padding-left:6px;" for="formFile" class="form-label my-2">Add Title</label>
             <input class="form-control" id="customFile" asp-for="Title" />
             <span class="text-danger" asp-validation-for="Title">@ViewBag.error</span>
         </div>
         <div class="form-group">
-            <label for="formFile" class="form-label my-2">Add Description</label>
-            <textarea class="form-control" id="slider-text" asp-for="ShortDesc" rows="5"></textarea>
+            <label style="padding-left:6px;" for="formFile" class="form-label my-2">Add Description</label>
+            <textarea class="form-control"  asp-for="ShortDesc" rows="5"></textarea>
             <span class="text-danger" asp-validation-for="ShortDesc">@ViewBag.error</span>
         </div>
         <div class="buttons my-3">
@@ -34,9 +34,5 @@
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/ckeditor/ckeditor.js"></script>
-    <script>
-        CKEDITOR.replace("slider-text")
-    </script>
  }
 
