added crud position HomeBanner

--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Bride/Detail.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Bride/Detail.cshtml
@@ -7,14 +7,14 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th style="text-align: center;">
+                <th style="text-align: start;">
                     Image
                 </th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td class="py-1" style="text-align: center;">
+                <td class="py-1" style="text-align: start;">
                     <img src="~/assets/images/@Model.Image" style="width:250px;height:200px" />
                 </td>
             </tr>
