--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -158,9 +158,19 @@
                                     <div data-i18n="Error">AboutUs</div>
                                 </a>
                             </li>
-                                <li class="menu-item">
-                            <a asp-area="Admin" asp-controller="Bride" asp-action="Index" class="menu-link">
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Bride" asp-action="Index" class="menu-link">
                                     <div data-i18n="Error">Bride</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Position" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Position</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Team" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Team</div>
                                 </a>
                             </li>
                         </ul>
@@ -285,7 +295,7 @@
 
     <!-- Main JS -->
     <script src="~/admin/js/main.js"></script>
-   
+
 
     <!-- Page JS -->
     <script src="~/admin/js/dashboards-analytics.js"></script>
