team crud is ready

--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Team/Detail.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Team/Detail.cshtml
@@ -24,15 +24,15 @@
         <tbody>
             <tr>
                 <td class="py-1" style="text-align: center;">
-                    <img src="~/assets/images/@Model.Image" style="width:250px;height:200px" />
+                    <img src="~/assets/images/@Model.Image" style="width:200px;height:200px" />
                 </td>
                 <td class="py-1" style="text-align: center;">
                     @Model.Name
                 </td>
                 <td class="py-1" style="text-align: center;">
-                    @Model.Position
+                    @Model.Position.Name
                 </td>
-                <td class="py-1" style="text-align: center;">
+                <td class="py-1" style="text-align: center;width: 400px">
                     @Model.Testimonials
                 </td>
             </tr>
