--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Team/Edit.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Team/Edit.cshtml
@@ -1,10 +1,12 @@
-﻿@model TeamCreateVM
+﻿@model TeamUpdateVM
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
-
 <div class="container my-5">
-    <form class="forms-sample" asp-action="Create" method="post" enctype="multipart/form-data">
+    <div class="slider-content" style="    width: 200px;height: 200px;">
+        <img style="width:100%;height:100%;" src="~/assets/images/@Model.Image" />
+    </div>
+    <form style="width: 70%;" class="forms-sample" asp-action="Edit" method="post" enctype="multipart/form-data">
         <label style="padding-left:6px;" for="formFile" class="form-label my-2">Choose Photo</label>
         <input class="form-control" id="customFile" asp-for="Photo" />
         <span class="text-danger" asp-validation-for="Photo"></span>
@@ -14,7 +16,7 @@
             <span class="text-danger" asp-validation-for="Name">@ViewBag.error</span>
         </div>
         <div class="form-group">
-            <label style="padding-left:6px;" for=" formFile" class="form-label my-2">Add Position</label>
+            <label style="padding-left:6px;" for="formFile" class="form-label my-2">Add Position</label>
             <select class="form-control" id="customFile" asp-for="PositionId" asp-items="@ViewBag.positions"></select>
         </div>
         <div class="form-group">
@@ -32,4 +34,5 @@
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
  }
+
 
