--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -178,6 +178,16 @@
                                     <div data-i18n="Error">Advertising</div>
                                 </a>
                             </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="AboutBanner" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">AboutBanner</div>
+                                </a>
+                            </li>
+                               <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Setting" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Setting</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
