--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -183,9 +183,19 @@
                                     <div data-i18n="Error">AboutBanner</div>
                                 </a>
                             </li>
-                               <li class="menu-item">
+                            <li class="menu-item">
                                 <a asp-area="Admin" asp-controller="Setting" asp-action="Index" class="menu-link">
                                     <div data-i18n="Error">Setting</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Social" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Social</div>
+                                </a>
+                            </li>
+                                  <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Headerbackground" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Headerbackground</div>
                                 </a>
                             </li>
                         </ul>
